# rust_bazel_rules_oci_sample

./: .gitignore  Cargo.toml  MODULE.bazel  README.md
my_rust_project/: BUILD  Cargo.toml
